# amalgamator

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: check.yml  test.yml
src/: lib.rs
